# tiny_eva

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: checks.yaml
examples/: demo.ipynb
tests/: conftest.py  test_all_zeros.py  test_bbox.py  test_car_query.py  test_decoder.py  test_frame.py  test_loader.py  test_num_black_pixels_udf.py  test_query.py  test_result.py  test_udf_loader.py  test_video.py
tests/integration/: test_all_zeros.py  test_num_black_pixels_udf.py
tests/loaders/: test_callable_loader.py  test_udf_loader.py
tests/results/: test_multi_result.py  test_singular_result.py
tiny_eva/: bbox.py  decoder.py  executor.py  frame.py  loader.py  query.py  result.py  udf_loader.py  video.py
tiny_eva/loaders/: callable_loader.py  generic_loader.py  torch_hub_loader.py  udf_loader.py
