[metadata]
name = tiny_eva
description = small video analytics library
author = Aubhro Sengupta
platform = unix, linux, osx
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    tiny_eva
install_requires =
    opencv-python
python_requires = >=3.7
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
tiny_eva = py.typed

[flake8]
max-line-length=100
